--- a/shared/config/init.vendor.rc
+++ b/shared/config/init.vendor.rc
@@ -114,3 +114,9 @@ service bugreport /system/bin/dumpstate -d -p -B -z -o /sdcard/bugreport
     disabled
     oneshot
     keycodes 30 48
+
+# TODO: disable this service once cuttlefish implements system suspend
+service suspend_blocker /vendor/bin/suspend_blocker
+    class early_hal # Start together with system_suspend HAL
+    group system
+    user root
