Move suspend_blocker to /vendor
So we can block KEYCODE_SLEEP from actually suspending the device,
even if we have mixed with GSI.

Bug: 171452730
Bug: 172700553
Bug: 175651875
Bug: 176555481
Change-Id: If8e1189eb4e6477d5ded87da2647be7670378ac9
(cherry picked from commit b4c17321b678d9c2da97a57550b603b9be0b66f6)

--- a/shared/config/init.vendor.rc
+++ b/shared/config/init.vendor.rc
@@ -133,3 +133,9 @@ service bugreport /system/bin/dumpstate -d -p -z
     disabled
     oneshot
     keycodes 30 48
+
+# TODO: disable this service once cuttlefish implements system suspend
+service suspend_blocker /vendor/bin/suspend_blocker
+    class early_hal # Start together with system_suspend HAL
+    group system
+    user root
