--- a/shared/config/init.vendor.rc
+++ b/shared/config/init.vendor.rc
@@ -118,5 +118,5 @@ service bugreport /system/bin/dumpstate -d -p -B -z -o /sdcard/bugreport
 # TODO: disable this service once cuttlefish implements system suspend
 service suspend_blocker /vendor/bin/suspend_blocker
     class early_hal # Start together with system_suspend HAL
-    group system
+    group wakelock
     user root
